# toy-pypkg

./: CONTRIBUTING.rst  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  toy_pypkg.rst
tests/: test_toy_pypkg.py
toy_pypkg/: toy_pypkg.py
