[tool.poetry]
name = "toy_pypkg"
version = "0.1.0"
description = "Toy python packag (test)"
authors = ["mmyz <yzmarco.ma@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
